--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simon Says Game</title>
-    <link href="_10simon.css" rel="stylesheet">
+    <link href="Style.css" rel="stylesheet">
 </head>
 <body>
         <h1> Simon Says Game</h1>
@@ -22,6 +22,7 @@
             </div>
             
         </div>
-    <script src="_10simon.js"></script>
+    <script src="App.js"></script>
 </body>
+
 </html>
