--- a/index.html
+++ b/index.html
@@ -22,7 +22,18 @@
             </div>
             
         </div>
+        <br><br>
+    <div>
+        <pre>
+    How to Play
+ <b>1. Watch the Sequence:</b> The game will light up a color in a specific sequence.
+ <b>2. Repeat the Sequence:</b> Click the colors in the same order.
+ <b>3. Level Up:</b> Each round, the game adds a new color to the sequence, making it progressively harder to follow.
+ <b>4. Keep Going:</b> Try to remember and repeat the sequence as it grows. How far can you go
+        </pre>
+    </div>
     <script src="App.js"></script>
 </body>
 
 </html>
+
